--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Move the ship around
+		    Move The Ship Around
 	    </footer>
 	</body>
 </html>
